Add functionApi
