# pkg/api/function/api.go
@@ -1,4 +1,4 @@
-package api
+package function
 
 import (
 	"fmt"
@@ -11,12 +11,10 @@ import (
 	"github.com/sirupsen/logrus"
 )
 
-// Towards environment (Fission)
-// Should not be exposed externally, used by controller & co
-type FunctionEnvApi interface {
+type Api interface {
 	// Request function invocation (Async)
-	Invoke(fn *types.FunctionInvocationSpec) (string, error)
-
+	//Invoke(fn *types.FunctionInvocationSpec) (string, error)
+	//
 	InvokeSync(fn *types.FunctionInvocationSpec) (*types.FunctionInvocation, error)
 	// Cancel function invocation
 	//Cancel(id string) error
@@ -25,24 +23,20 @@ type FunctionEnvApi interface {
 	//Status()
 }
 
-// Towards engine
-type FunctionHandlerApi interface {
-	// Handler to update the status of the function invocation
-	UpdateStatus()
-}
-
-type FissionFunctionEnvApi struct {
+// TODO doesn't belong in the API
+// Responsible for executing functions
+type FissionFunctionApi struct {
 	poolmgr *client.Client
 }
 
-func NewFissionFunctionApi(fission *client.Client) FunctionEnvApi {
-	return &FissionFunctionEnvApi{fission}
+func NewFissionFunctionApi(fission *client.Client) Api {
+	return &FissionFunctionApi{fission}
 }
 
-func (fi *FissionFunctionEnvApi) InvokeSync(fn *types.FunctionInvocationSpec) (*types.FunctionInvocation, error) {
+func (fi *FissionFunctionApi) InvokeSync(spec *types.FunctionInvocationSpec) (*types.FunctionInvocation, error) {
 	meta := &fission.Metadata{
-		Name: fn.GetName(),
-		Uid:  fn.GetId(),
+		Name: spec.GetFunctionName(),
+		Uid:  spec.GetFunctionId(),
 	}
 	logrus.WithFields(logrus.Fields{
 		"metadata": meta,
@@ -51,7 +45,6 @@ func (fi *FissionFunctionEnvApi) InvokeSync(fn *types.FunctionInvocationSpec) (*
 	if err != nil {
 		return nil, err
 	}
-	//serviceUrl := fmt.Sprintf("http://192.168.99.100:31314/fission-function/%s", fn.GetName())
 
 	resp, err := http.Get(serviceUrl) // TODO allow specifying of http method
 	if err != nil {
@@ -65,9 +58,10 @@ func (fi *FissionFunctionEnvApi) InvokeSync(fn *types.FunctionInvocationSpec) (*
 	}
 	fmt.Printf("Resp: (%s)", body)
 
-	return &types.FunctionInvocation{}, nil
-}
-
-func (fi *FissionFunctionEnvApi) Invoke(fn *types.FunctionInvocationSpec) (string, error) {
-	panic("implement me")
+	return &types.FunctionInvocation{
+		Spec: spec,
+		Status: &types.FunctionInvocationStatus{
+			Status: types.FunctionInvocationStatus_SUCCEEDED,
+		},
+	}, nil
 }
