# pkg/api/workflow/validator.go
@@ -1,0 +1,83 @@
+package workflow
+
+import (
+	"errors"
+
+	"fmt"
+	"strings"
+
+	"github.com/fission/fission-workflow/pkg/types"
+)
+
+type Validator struct {
+}
+
+func NewValidator() *Validator {
+	return &Validator{}
+}
+
+// Pre-parse
+func (vl *Validator) Validate(spec *types.WorkflowSpec) error {
+	if len(spec.GetName()) == 0 {
+		return errors.New("Workflow requires a name")
+	}
+
+	// Version is not important right now
+
+	src := spec.GetSrc()
+
+	if src == nil {
+		return errors.New("No source (src) provided")
+	}
+
+	if len(src.ApiVersion) > 0 && !strings.EqualFold(src.GetApiVersion(), "v1") {
+		return fmt.Errorf("Unknown API version: '%v'.", src.GetApiVersion())
+	}
+
+	refTable := map[string]*types.Task{}
+
+	for taskId, task := range src.Tasks {
+		if len(taskId) == 0 {
+			return errors.New("Task requires an id")
+		}
+
+		if len(task.Name) == 0 {
+			return errors.New("Task requires an name")
+		}
+
+		_, ok := refTable[taskId]
+		if ok {
+			return fmt.Errorf("Task id '%s' is not unique", taskId)
+		}
+		refTable[taskId] = task
+
+		if len(task.GetType()) > 0 && !strings.EqualFold(task.GetType(), "function") {
+			return fmt.Errorf("Unknown task type '%s'", task.GetType())
+		}
+	}
+
+	if len(src.Tasks) == 0 {
+		return errors.New("Workflow needs at least one task")
+	}
+
+	// TODO check for cycles (?)
+	// Dependency testing
+	startTasks := []*types.Task{}
+	for taskId, task := range src.GetTasks() {
+		if len(task.GetDependencies()) == 0 {
+			startTasks = append(startTasks, task)
+		}
+
+		for _, dep := range task.GetDependencies() {
+			if _, ok := refTable[dep]; !ok {
+				return fmt.Errorf("Task '%s' ocntains undefined dependency '%s'", taskId, dep)
+			}
+		}
+	}
+
+	if len(startTasks) == 0 {
+		return errors.New("Workflow does not contain any start tasks (tasks with no dependencies)")
+	}
+
+	return nil
+}
