# pkg/apiserver/apiserver.pb.go
@@ -188,6 +188,7 @@ type WorkflowAPIClient interface {
 	Create(ctx context.Context, in *types.WorkflowSpec, opts ...grpc.CallOption) (*WorkflowIdentifier, error)
 	List(ctx context.Context, in *google_protobuf2.Empty, opts ...grpc.CallOption) (*SearchWorkflowResponse, error)
 	Get(ctx context.Context, in *WorkflowIdentifier, opts ...grpc.CallOption) (*types.Workflow, error)
+	Validate(ctx context.Context, in *types.WorkflowSpec, opts ...grpc.CallOption) (*google_protobuf2.Empty, error)
 }
 
 type workflowAPIClient struct {
@@ -225,12 +226,22 @@ func (c *workflowAPIClient) Get(ctx context.Context, in *WorkflowIdentifier, opt
 	return out, nil
 }
 
+func (c *workflowAPIClient) Validate(ctx context.Context, in *types.WorkflowSpec, opts ...grpc.CallOption) (*google_protobuf2.Empty, error) {
+	out := new(google_protobuf2.Empty)
+	err := grpc.Invoke(ctx, "/apiserver.WorkflowAPI/Validate", in, out, c.cc, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // Server API for WorkflowAPI service
 
 type WorkflowAPIServer interface {
 	Create(context.Context, *types.WorkflowSpec) (*WorkflowIdentifier, error)
 	List(context.Context, *google_protobuf2.Empty) (*SearchWorkflowResponse, error)
 	Get(context.Context, *WorkflowIdentifier) (*types.Workflow, error)
+	Validate(context.Context, *types.WorkflowSpec) (*google_protobuf2.Empty, error)
 }
 
 func RegisterWorkflowAPIServer(s *grpc.Server, srv WorkflowAPIServer) {
@@ -291,6 +302,24 @@ func _WorkflowAPI_Get_Handler(srv interface{}, ctx context.Context, dec func(int
 	return interceptor(ctx, in, info, handler)
 }
 
+func _WorkflowAPI_Validate_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(types.WorkflowSpec)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(WorkflowAPIServer).Validate(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/apiserver.WorkflowAPI/Validate",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(WorkflowAPIServer).Validate(ctx, req.(*types.WorkflowSpec))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 var _WorkflowAPI_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "apiserver.WorkflowAPI",
 	HandlerType: (*WorkflowAPIServer)(nil),
@@ -306,6 +335,10 @@ var _WorkflowAPI_serviceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Get",
 			Handler:    _WorkflowAPI_Get_Handler,
+		},
+		{
+			MethodName: "Validate",
+			Handler:    _WorkflowAPI_Validate_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
@@ -632,43 +665,45 @@ var _FunctionEnvApi_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("pkg/apiserver/apiserver.proto", fileDescriptor0) }
 
 var fileDescriptor0 = []byte{
-	// 603 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x52, 0xd1, 0x6a, 0xd4, 0x4c,
-	0x14, 0x26, 0xed, 0x4f, 0xfa, 0xe7, 0x2c, 0x5d, 0xdb, 0xa9, 0xdd, 0x2e, 0x71, 0x2b, 0xeb, 0x20,
-	0x58, 0x0a, 0x26, 0xb0, 0x05, 0xc1, 0x5e, 0x08, 0x65, 0xad, 0xb5, 0xd0, 0x8b, 0xba, 0x15, 0xbd,
-	0x13, 0xb2, 0xd9, 0x93, 0xed, 0xd8, 0xed, 0x4c, 0xcc, 0x4c, 0xb6, 0x14, 0xf1, 0xc6, 0x57, 0xf0,
-	0x05, 0x7c, 0x27, 0x5f, 0xc1, 0xa7, 0xf0, 0x4a, 0x32, 0xc9, 0x64, 0x43, 0x93, 0x96, 0x7a, 0xb3,
-	0x9b, 0x39, 0x67, 0xe6, 0xfb, 0xbe, 0x73, 0xbe, 0x0f, 0xb6, 0xe3, 0x8b, 0xa9, 0x1f, 0xc4, 0x4c,
-	0x62, 0x32, 0xc7, 0x64, 0xf1, 0xe5, 0xc5, 0x89, 0x50, 0x82, 0x38, 0x65, 0xc1, 0x7d, 0x39, 0x65,
-	0xea, 0x3c, 0x1d, 0x7b, 0xa1, 0xb8, 0xf4, 0x23, 0x26, 0x25, 0x13, 0xdc, 0xfc, 0x3f, 0xbf, 0x12,
-	0xc9, 0x45, 0x34, 0x13, 0x57, 0x7e, 0x86, 0xa6, 0xae, 0x63, 0x94, 0xf9, 0x6f, 0x8e, 0xe2, 0x0e,
-	0xef, 0xfb, 0x14, 0xe7, 0xc8, 0x95, 0x54, 0x22, 0xc1, 0xca, 0x67, 0x01, 0xf2, 0x68, 0x2a, 0xc4,
-	0x74, 0x86, 0xbe, 0x3e, 0x8d, 0xd3, 0xc8, 0xc7, 0xcb, 0x58, 0x5d, 0x17, 0xcd, 0x5e, 0xd1, 0x0c,
-	0x62, 0xe6, 0x07, 0x9c, 0x0b, 0x15, 0x28, 0x26, 0x78, 0xc1, 0x4f, 0x9f, 0x02, 0xf9, 0x58, 0xd0,
-	0x1c, 0x4f, 0x90, 0x2b, 0x16, 0x31, 0x4c, 0x48, 0x1b, 0x96, 0xd8, 0xa4, 0x6b, 0xf5, 0xad, 0x1d,
-	0x67, 0xb4, 0xc4, 0x26, 0x74, 0x0b, 0x36, 0xcf, 0x30, 0x48, 0xc2, 0x73, 0x73, 0x77, 0x84, 0x5f,
-	0x52, 0x94, 0x8a, 0xbe, 0x80, 0xce, 0xcd, 0x86, 0x8c, 0x05, 0x97, 0x48, 0x7a, 0xe0, 0x18, 0xfd,
-	0xb2, 0x6b, 0xf5, 0x97, 0x77, 0x9c, 0xd1, 0xa2, 0x40, 0x3d, 0xe8, 0x95, 0xb4, 0x7c, 0x2e, 0x42,
-	0xad, 0xe9, 0x0e, 0x01, 0x7b, 0xb0, 0x55, 0xbf, 0xff, 0x2e, 0xc5, 0xe4, 0x9a, 0x74, 0x61, 0x45,
-	0xa6, 0xe3, 0xcf, 0x18, 0xaa, 0xe2, 0xbe, 0x39, 0xd2, 0x7d, 0xe8, 0xd4, 0x1f, 0x9d, 0x30, 0xa9,
-	0x48, 0x1f, 0x5a, 0xac, 0xac, 0x18, 0x79, 0xd5, 0x12, 0x7d, 0xd5, 0x24, 0xf0, 0x08, 0xd5, 0x08,
-	0xf3, 0xf1, 0x1e, 0x83, 0x9d, 0xdb, 0xa0, 0x1f, 0xb7, 0x06, 0xb6, 0x77, 0x98, 0x1d, 0x47, 0x45,
-	0x95, 0xf6, 0xc1, 0x7e, 0x8b, 0xc1, 0x4c, 0x9d, 0x93, 0x0e, 0xd8, 0x52, 0x05, 0x2a, 0x95, 0x85,
-	0xbc, 0xe2, 0x34, 0xf8, 0x63, 0x41, 0xcb, 0x50, 0x1c, 0x9c, 0x1e, 0x93, 0x13, 0xb0, 0x87, 0x09,
-	0x06, 0x0a, 0xc9, 0xaa, 0x67, 0xea, 0x67, 0x31, 0x86, 0xee, 0xb6, 0xb7, 0x88, 0x5e, 0xdd, 0x2b,
-	0xfa, 0xf0, 0xfb, 0xaf, 0xdf, 0x3f, 0x96, 0xda, 0xd4, 0xf1, 0xcd, 0x7a, 0xf7, 0xad, 0x5d, 0xf2,
-	0x1e, 0xfe, 0xd3, 0x93, 0x76, 0xbc, 0xdc, 0x7e, 0xcf, 0x64, 0xc3, 0x3b, 0xcc, 0xb2, 0xe1, 0x3e,
-	0xa9, 0x80, 0x36, 0x3b, 0x48, 0xd7, 0x35, 0x70, 0x8b, 0x2c, 0x80, 0xc9, 0x11, 0x2c, 0x1f, 0xa1,
-	0x22, 0x77, 0x2b, 0x72, 0x9d, 0xb2, 0x48, 0x3b, 0x1a, 0x63, 0x8d, 0xb4, 0x4b, 0x0c, 0xff, 0x2b,
-	0x9b, 0x7c, 0x1b, 0xfc, 0x5c, 0x86, 0xcd, 0xfa, 0x7e, 0xb3, 0x35, 0x8c, 0xc1, 0xce, 0x0a, 0x17,
-	0x48, 0xb6, 0xbc, 0xfa, 0x0d, 0xbd, 0x90, 0x67, 0x4d, 0xf4, 0x0d, 0x29, 0x32, 0xec, 0xb4, 0xe5,
-	0x2f, 0xac, 0xcd, 0x96, 0x13, 0x82, 0x3d, 0x0c, 0x78, 0x88, 0x33, 0x72, 0x5f, 0x28, 0xf7, 0x96,
-	0x3d, 0xd2, 0xae, 0xa6, 0x20, 0xbb, 0x6b, 0x15, 0x0a, 0x3d, 0x22, 0xf9, 0xf0, 0x0f, 0x0e, 0x34,
-	0xc7, 0x94, 0x6e, 0x68, 0xf0, 0x55, 0x52, 0xd5, 0x4f, 0xa2, 0xdc, 0x83, 0x7b, 0x2b, 0xef, 0x35,
-	0xb4, 0x87, 0x82, 0xab, 0x80, 0x71, 0x4c, 0x8c, 0x7e, 0x52, 0xd3, 0x3f, 0x38, 0x85, 0xff, 0x0f,
-	0x26, 0x97, 0x4c, 0x9b, 0xf2, 0x1a, 0xec, 0x33, 0x9d, 0xda, 0x5b, 0xa7, 0x59, 0xaf, 0xc8, 0xc9,
-	0x83, 0x4f, 0x1f, 0x68, 0x68, 0x87, 0xac, 0xf8, 0x45, 0xe2, 0x3f, 0x41, 0xfb, 0x4d, 0xca, 0xc3,
-	0x8c, 0xe2, 0x90, 0xcf, 0x0f, 0x62, 0x96, 0x65, 0xbe, 0x34, 0xdb, 0xb4, 0x6e, 0x98, 0xbd, 0xd1,
-	0xd0, 0xa8, 0x64, 0x3e, 0x2a, 0x9a, 0xfb, 0xd6, 0xee, 0xd8, 0xd6, 0x9a, 0xf6, 0xfe, 0x06, 0x00,
-	0x00, 0xff, 0xff, 0xab, 0xb9, 0xeb, 0xb9, 0xb9, 0x05, 0x00, 0x00,
+	// 635 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x53, 0xd1, 0x6a, 0x13, 0x41,
+	0x14, 0x25, 0xa9, 0x6c, 0xbb, 0x37, 0x34, 0xb6, 0x53, 0x9b, 0x84, 0x98, 0x6a, 0x1c, 0x14, 0x4b,
+	0xc0, 0x5d, 0x48, 0x41, 0x30, 0x0f, 0x42, 0x89, 0xb5, 0x16, 0xfa, 0x50, 0x53, 0xa9, 0xe0, 0x83,
+	0xb0, 0xd9, 0xdc, 0xa4, 0x63, 0xd3, 0x99, 0xed, 0xce, 0x6c, 0x4a, 0x11, 0x5f, 0xfc, 0x05, 0x3f,
+	0xc4, 0x1f, 0xf1, 0xcd, 0x5f, 0xf0, 0x43, 0x64, 0x67, 0x67, 0x93, 0xb5, 0xbb, 0x2d, 0xf5, 0x25,
+	0xd9, 0x7b, 0xef, 0xcc, 0x39, 0xe7, 0xce, 0xb9, 0x17, 0xb6, 0x82, 0xb3, 0x89, 0xeb, 0x05, 0x4c,
+	0x62, 0x38, 0xc3, 0x70, 0xf1, 0xe5, 0x04, 0xa1, 0x50, 0x82, 0xd8, 0xf3, 0x44, 0xf3, 0xd5, 0x84,
+	0xa9, 0xd3, 0x68, 0xe8, 0xf8, 0xe2, 0xdc, 0x1d, 0x33, 0x29, 0x99, 0xe0, 0xe9, 0xff, 0x8b, 0x4b,
+	0x11, 0x9e, 0x8d, 0xa7, 0xe2, 0xd2, 0x8d, 0xd1, 0xd4, 0x55, 0x80, 0x32, 0xf9, 0x4d, 0x50, 0x9a,
+	0xfd, 0xbb, 0x5e, 0xc5, 0x19, 0x72, 0x25, 0x95, 0x08, 0x31, 0xf3, 0x69, 0x40, 0x1e, 0x4e, 0x84,
+	0x98, 0x4c, 0xd1, 0xd5, 0xd1, 0x30, 0x1a, 0xbb, 0x78, 0x1e, 0xa8, 0x2b, 0x53, 0x6c, 0x99, 0xa2,
+	0x17, 0x30, 0xd7, 0xe3, 0x5c, 0x28, 0x4f, 0x31, 0xc1, 0x0d, 0x3f, 0x7d, 0x0a, 0xe4, 0xa3, 0xa1,
+	0x39, 0x18, 0x21, 0x57, 0x6c, 0xcc, 0x30, 0x24, 0x55, 0x28, 0xb3, 0x51, 0xa3, 0xd4, 0x2e, 0x6d,
+	0xdb, 0x83, 0x32, 0x1b, 0xd1, 0x3a, 0x6c, 0x1e, 0xa3, 0x17, 0xfa, 0xa7, 0xe9, 0xd9, 0x01, 0x5e,
+	0x44, 0x28, 0x15, 0x7d, 0x09, 0xb5, 0xeb, 0x05, 0x19, 0x08, 0x2e, 0x91, 0xb4, 0xc0, 0x4e, 0xf5,
+	0xcb, 0x46, 0xa9, 0xbd, 0xb4, 0x6d, 0x0f, 0x16, 0x09, 0xea, 0x40, 0x6b, 0x4e, 0xcb, 0x67, 0xc2,
+	0xd7, 0x9a, 0x6e, 0x11, 0xb0, 0x03, 0xf5, 0xfc, 0xf9, 0xf7, 0x11, 0x86, 0x57, 0xa4, 0x01, 0xcb,
+	0x32, 0x1a, 0x7e, 0x41, 0x5f, 0x99, 0xf3, 0x69, 0x48, 0x7b, 0x50, 0xcb, 0x5f, 0x3a, 0x64, 0x52,
+	0x91, 0x36, 0x54, 0xd8, 0x3c, 0x93, 0xca, 0xcb, 0xa6, 0xe8, 0xeb, 0x22, 0x81, 0xfb, 0xa8, 0x06,
+	0x98, 0xb4, 0xf7, 0x08, 0xac, 0xc4, 0x06, 0x7d, 0xb9, 0xd2, 0xb5, 0x9c, 0xbd, 0x38, 0x1c, 0x98,
+	0x2c, 0x6d, 0x83, 0xf5, 0x0e, 0xbd, 0xa9, 0x3a, 0x25, 0x35, 0xb0, 0xa4, 0xf2, 0x54, 0x24, 0x8d,
+	0x3c, 0x13, 0x75, 0x7f, 0x95, 0xa1, 0x92, 0x52, 0xec, 0x1e, 0x1d, 0x90, 0x43, 0xb0, 0xfa, 0x21,
+	0x7a, 0x0a, 0xc9, 0xaa, 0x93, 0xe6, 0x8f, 0x03, 0xf4, 0x9b, 0x5b, 0xce, 0x62, 0xf4, 0xf2, 0x5e,
+	0xd1, 0x07, 0xdf, 0x7f, 0xff, 0xf9, 0x51, 0xae, 0x52, 0xdb, 0x4d, 0x9f, 0xb7, 0x57, 0xea, 0x90,
+	0x0f, 0x70, 0x4f, 0x77, 0x5a, 0x73, 0x12, 0xfb, 0x9d, 0x74, 0x36, 0x9c, 0xbd, 0x78, 0x36, 0x9a,
+	0x4f, 0x32, 0xa0, 0xc5, 0x0e, 0xd2, 0x75, 0x0d, 0x5c, 0x21, 0x0b, 0x60, 0xb2, 0x0f, 0x4b, 0xfb,
+	0xa8, 0xc8, 0xed, 0x8a, 0x9a, 0xf6, 0x3c, 0x49, 0x6b, 0x1a, 0x63, 0x8d, 0x54, 0xe7, 0x18, 0xee,
+	0x57, 0x36, 0xfa, 0x46, 0x8e, 0x60, 0xe5, 0xc4, 0x9b, 0xb2, 0x51, 0x41, 0xbb, 0x37, 0x28, 0xa6,
+	0x5b, 0x1a, 0xaa, 0x4e, 0xc9, 0x02, 0x6a, 0x66, 0x20, 0x7a, 0xa5, 0x4e, 0xf7, 0xe7, 0x12, 0x6c,
+	0xe6, 0x1d, 0x8b, 0x1f, 0xf6, 0x02, 0xac, 0x38, 0x71, 0x86, 0xa4, 0xee, 0xe4, 0x4f, 0x68, 0xce,
+	0xe7, 0x45, 0x0d, 0x15, 0xcc, 0x25, 0x7d, 0xa6, 0x45, 0x3c, 0x26, 0x15, 0x77, 0x31, 0x2c, 0x9f,
+	0xd6, 0x68, 0x36, 0x8c, 0x5f, 0xdf, 0x07, 0xab, 0xef, 0x71, 0x1f, 0xa7, 0xe4, 0xae, 0xc8, 0x37,
+	0xb6, 0xdd, 0xd0, 0x8c, 0xa4, 0xb3, 0x96, 0xa1, 0x48, 0xde, 0xf0, 0xe4, 0x3f, 0x2c, 0x2e, 0xde,
+	0x03, 0xba, 0xa1, 0xc1, 0x57, 0xff, 0x69, 0x87, 0x8c, 0x13, 0x93, 0xef, 0xac, 0xbc, 0x55, 0x50,
+	0xee, 0x0b, 0xae, 0x3c, 0xc6, 0x31, 0x4c, 0xf5, 0x93, 0x9c, 0xfe, 0xee, 0x11, 0xac, 0xec, 0x8e,
+	0xce, 0x99, 0xf6, 0xe8, 0x0d, 0x58, 0xc7, 0x7a, 0x2d, 0x6e, 0xec, 0x66, 0x3d, 0x23, 0x27, 0xd9,
+	0x2c, 0x7a, 0x5f, 0x43, 0xdb, 0x64, 0xd9, 0x35, 0x2b, 0xf5, 0x19, 0xaa, 0x6f, 0x23, 0xee, 0xc7,
+	0x14, 0x7b, 0x7c, 0xb6, 0x1b, 0xb0, 0x78, 0xa9, 0xe6, 0xde, 0xa7, 0xa5, 0x6b, 0xde, 0x6f, 0x14,
+	0x14, 0x32, 0x4b, 0x35, 0x36, 0xc5, 0x5e, 0xa9, 0x33, 0xb4, 0xb4, 0xa6, 0x9d, 0xbf, 0x01, 0x00,
+	0x00, 0xff, 0xff, 0xf2, 0x17, 0x09, 0x62, 0x1a, 0x06, 0x00, 0x00,
 }
