# pkg/apiserver/apiserver.swagger.json
@@ -190,6 +190,32 @@
         ]
       }
     },
+    "/workflow/validate": {
+      "post": {
+        "operationId": "Validate",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/protobufEmpty"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/WorkflowSpec"
+            }
+          }
+        ],
+        "tags": [
+          "WorkflowAPI"
+        ]
+      }
+    },
     "/workflow/{id}": {
       "get": {
         "operationId": "Get",
@@ -229,15 +255,17 @@
           "$ref": "#/definitions/FunctionInvocationStatus"
         }
       },
+      "description": "It contains no indication which workflow/task it is executed for",
       "title": "Function Invocation Model"
     },
     "FunctionInvocationSpec": {
       "type": "object",
       "properties": {
-        "name": {
-          "type": "string"
+        "functionId": {
+          "type": "string",
+          "title": "Id of the function to be invoked (no ambiguatity at this point"
         },
-        "id": {
+        "functionName": {
           "type": "string"
         }
       }
@@ -281,6 +309,48 @@
       },
       "title": "Common"
     },
+    "Task": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string",
+          "description": "By default the following types are supported:\n- `function`: execute a function.\n- `exit`: Once this task is executed, the controller will exit the workflow, canceling all running tasks.",
+          "title": "Type defines the type of the task that needs to be performed"
+        },
+        "name": {
+          "type": "string",
+          "title": "Name/identifier of the function"
+        },
+        "args": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/TaskParameters"
+          }
+        },
+        "dependencies": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "title": "TODO next or after\nDependencies for this task to execute"
+        }
+      },
+      "description": "A task is the primitive unit of a workflow, representing an action that needs to be performed in order to continue.\n\nA task as a number of inputs and exactly two outputs\nId is specified outside of task"
+    },
+    "TaskParameters": {
+      "type": "object"
+    },
+    "TaskTypeDef": {
+      "type": "object",
+      "properties": {
+        "src": {
+          "type": "string"
+        },
+        "resolved": {
+          "type": "string"
+        }
+      }
+    },
     "Workflow": {
       "type": "object",
       "properties": {
@@ -289,9 +359,30 @@
         },
         "spec": {
           "$ref": "#/definitions/WorkflowSpec"
+        },
+        "status": {
+          "$ref": "#/definitions/WorkflowStatus"
         }
       },
       "title": "Workflow Model"
+    },
+    "WorkflowDefinition": {
+      "type": "object",
+      "properties": {
+        "apiVersion": {
+          "type": "string",
+          "description": "apiVersion describes what version is of the workflow definition.\n\nBy default the workflow engine will assume the latest version to be used."
+        },
+        "tasks": {
+          "type": "object",
+          "additionalProperties": {
+            "$ref": "#/definitions/Task"
+          },
+          "description": "Dependency graph is build into the tasks",
+          "title": "TODO Parameters\nActions"
+        }
+      },
+      "description": "The workflowDefinition contains the definition of a workflow.\n\nIdeally the source code (json, yaml) can be converted directly to this message.\nNaming, triggers and versioning of the workflow itself is out of the scope of this data structure, which is delegated\nto the user/system upon the creation of a workflow."
     },
     "WorkflowInvocationContainer": {
       "type": "object",
@@ -325,6 +416,12 @@
         "updatedAt": {
           "type": "string",
           "format": "date-time"
+        },
+        "tasks": {
+          "type": "object",
+          "additionalProperties": {
+            "$ref": "#/definitions/FunctionInvocation"
+          }
         }
       }
     },
@@ -348,8 +445,41 @@
         },
         "version": {
           "type": "string"
+        },
+        "src": {
+          "$ref": "#/definitions/WorkflowDefinition"
         }
       }
+    },
+    "WorkflowStatus": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "$ref": "#/definitions/WorkflowStatusStatus"
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "resolvedTasks": {
+          "type": "object",
+          "additionalProperties": {
+            "$ref": "#/definitions/TaskTypeDef"
+          }
+        }
+      },
+      "title": "Internal"
+    },
+    "WorkflowStatusStatus": {
+      "type": "string",
+      "enum": [
+        "UNKNOWN",
+        "PARSING",
+        "READY",
+        "FAILED",
+        "DELETED"
+      ],
+      "default": "UNKNOWN"
     },
     "apiserverHealth": {
       "type": "object",
