# pkg/apiserver/workflow.go
@@ -1,27 +1,25 @@
 package apiserver
 
 import (
-	"github.com/fission/fission-workflow/pkg/api"
+	"errors"
+
+	"github.com/fission/fission-workflow/pkg/api/workflow"
 	"github.com/fission/fission-workflow/pkg/types"
 	"github.com/golang/protobuf/ptypes/empty"
-	"github.com/sirupsen/logrus"
 	"golang.org/x/net/context"
 )
 
 // TODO move logic to gRPC-less code
 type GrpcWorkflowApiServer struct {
-	api *api.WorkflowApi
+	api       *workflow.Api
+	validator *workflow.Validator
 }
 
-func NewGrpcWorkflowApiServer(api *api.WorkflowApi) *GrpcWorkflowApiServer {
+func NewGrpcWorkflowApiServer(api *workflow.Api, validator *workflow.Validator) *GrpcWorkflowApiServer {
 	// TODO es: check if available
 	wf := &GrpcWorkflowApiServer{
-		api: api,
-	}
-
-	err := wf.api.Projector.Watch("workflows.>")
-	if err != nil {
-		logrus.Warnf("Failed to watch for workflows, because '%v'.", err)
+		api:       api,
+		validator: validator,
 	}
 
 	return wf
@@ -29,6 +27,11 @@ func NewGrpcWorkflowApiServer(api *api.WorkflowApi) *GrpcWorkflowApiServer {
 
 // TODO validate workflow
 func (ga *GrpcWorkflowApiServer) Create(ctx context.Context, wf *types.WorkflowSpec) (*WorkflowIdentifier, error) {
+	err := ga.validator.Validate(wf)
+	if err != nil {
+		return nil, err
+	}
+
 	id, err := ga.api.Create(wf)
 	if err != nil {
 		return nil, err
@@ -38,7 +41,12 @@ func (ga *GrpcWorkflowApiServer) Create(ctx context.Context, wf *types.WorkflowS
 }
 
 func (ga *GrpcWorkflowApiServer) Get(ctx context.Context, workflowId *WorkflowIdentifier) (*types.Workflow, error) {
-	return ga.api.Get(workflowId.GetId())
+	id := workflowId.GetId()
+	if len(id) == 0 {
+		return nil, errors.New("No id provided")
+	}
+
+	return ga.api.Get(id)
 }
 
 func (ga *GrpcWorkflowApiServer) List(ctx context.Context, req *empty.Empty) (*SearchWorkflowResponse, error) {
@@ -47,4 +55,13 @@ func (ga *GrpcWorkflowApiServer) List(ctx context.Context, req *empty.Empty) (*S
 		return nil, err
 	}
 	return &SearchWorkflowResponse{wfs}, nil
+}
+
+// TODO option to do a dummy parse to validate successful parse
+func (ga *GrpcWorkflowApiServer) Validate(ctx context.Context, spec *types.WorkflowSpec) (*empty.Empty, error) {
+	err := ga.validator.Validate(spec)
+	if err != nil {
+		return nil, err
+	}
+	return &empty.Empty{}, nil
 }
